# e21010

./: .gitignore  CMakeLists.txt  README.md  data  matcher.json  sam.out
alphas/: alphas.ipynb
analysis/: CMakeLists.txt  alphas.cfg  b2p.cfg  bananas.cfg  bananas2.cfg  bp.cpp  bpg.cfg  deltaEcontained.cfg  final.cfg  final_sim.cfg
analysis/bp/: b2p.cfg  bananas.cfg  bp.cpp  final.cfg
analysis/bp/include/: Cut.h  Hit.h  IS507Detector.h  IS507GeneralAnalysis.h  analysisIO.h  gCut.h
analysis/eloss/: CMakeLists.txt  Edep_vs_Ep.cpp  params.cfg  telescope_deadareas.cpp  thickness_from_punchthrough.cpp
analysis/eloss/include/: common.h
analysis/include/: Cut.h  E21010Detector.h  E21010GeneralAnalysis.h  Hit.h  analysisConfig.h  gCut.h  runTabulations.h
analysis/solid_angle_matrix/: solid_angle_matrix.cfg  solid_angle_matrix.cpp
cling-recipes/: cutg.txt
cmake/: path_config.cmake  sort_files.cmake
deltaE/: angleofincidence.ipynb  distortion.ipynb  hitpatterns.ipynb
final/: combined_spectrum.ipynb
macros/: CMakeLists.txt  oa_vs_sa.cpp  pixel_matrices.cpp  pos_matrices.cpp  solid_angle.cpp
python/: awkward_arrays.ipynb  awkward_ravelpad.ipynb  rpad.py
q2p/: E1E2.ipynb  q2p.ipynb  root-interpolator.txt  scipy-interpolator.ipynb  solid-angle_vs_opening-angle.ipynb
run_log/: run_log.csv  run_log.xlsx  runlog2spreadsheet.ipynb  trig-thresholds.xlsx
setup/: 3a_U1-U2.json  3a_U3-U4.json  3a_U5.json  3a_U6.json  DetectorMapping.spec  DetectorMapping.spec.old  U1.cal  U2.cal  U3.cal  U4.cal  U5.cal  U6.cal  setup.json  setup.json.notdc  setup.json.old  target.json
sim/: CMakeLists.txt  foil_search.sh  main.cpp
sim/res/beams/: beam.json
sim/res/macros/: G4alphaSource.mac  alphaSource.mac  iso_2proton.mac  iso_2proton_vis.mac  iso_proton.mac  iso_proton_vis.mac  run.mac  vis.mac
sim/res/macros/sweeps/: alpha.mac  beta.mac  proton.mac  proton_vis.mac
sim/res/sources/: AU3a.json  Na20.json
sim/res/targets/: target.json  target_min.json  targetholder.json
telescope/: Edep_vs_Ep.ipynb  deadarea.ipynb  gcuts.root  gcuts.txt
